client/src/app/components/nes-layout/layouts/layout-one/layout-one.component.scss
@import "../../nes-styles.scss";

.columns {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: stretch;
    gap: $panel-margin;
    height: fit-content;
}

app-eval-bar {
    margin-right: 3px;
}

.panels {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    gap: $panel-margin;
}

.score-panel {
    width: 100%; // stretch to take same width as level and lines panels combined
    box-sizing: border-box;
}

.score-panel:not(.has-opponent) {
    padding-bottom: 15px;
}

.score-panel h1.diff {
    align-self: flex-end;
    margin-right: 18px;
}

.score-panel.seven-digit h1.diff {
    margin-right: 6px;
}

.level-lines {
    display: flex;
    flex-direction: row;
    gap: $panel-margin;
}

.next-box-panel {
    width: 120px;
    height: 80px;
}

.level-panel {
    width: 75px; // prevent panel from stretching when level number increases
}

.lines-panel {
    width: 90px;
}

.spacer {
    flex-grow: 1;
}

.accuracy-panel {
    height: 70px;
}

.board-column {
    display: flex;
    flex-direction: column;
}

.keybinds-container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    height: 25px;
}

.keybinds {
    text-align: center;
    text-wrap: nowrap;
    font-family: $main-font;
    font-size: 13px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
    margin-top: 5px;
    width: 55%;
    opacity: 0.9;
}

.keybinds.hide {
    transition: opacity 0.5s ease;
    transition-delay: 1s;
    opacity: 0;
}

.trt-panel {
    width: 70px;
}

.trt-panel p, .trt-panel h2 {
    color: white;
    transition: color 1.5s;
}

.trt-panel.drought p, .trt-panel.drought h2 {
    color: red;
}

